5.2. Архивировать проект [#861 #291058]